[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/Text.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/Title.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/Button.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Tint" type="ColorRect" parent="."]
visible = false
margin_right = 1280.0
margin_bottom = 768.0
color = Color( 0.266667, 0.266667, 0.266667, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 1280.0
margin_bottom = 52.0
grow_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1273.0
margin_bottom = 45.0

[node name="TimeLeft" type="Label" parent="PanelContainer/HBoxContainer"]
margin_right = 1266.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Time Left: 100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColL" type="Label" parent="PanelContainer/HBoxContainer"]
visible = false
margin_left = 353.0
margin_right = 702.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 2 )
text = "Col-L: Yes"

[node name="ColR" type="Label" parent="PanelContainer/HBoxContainer"]
visible = false
margin_left = 529.0
margin_right = 1055.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Col-R: Yes"
valign = 1

[node name="TrailPoints" type="Label" parent="PanelContainer/HBoxContainer"]
visible = false
margin_left = 1059.0
margin_right = 1266.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 2 )
text = "Trail Points: 0"

[node name="PauseMenu" type="CenterContainer" parent="."]
margin_left = 323.0
margin_top = 254.218
margin_right = 957.0
margin_bottom = 509.218
rect_pivot_offset = Vector2( -1295.1, -244.244 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
margin_right = 634.0
margin_bottom = 297.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="PauseMenu/VBoxContainer"]
margin_right = 634.0
margin_bottom = 123.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.482353, 0.235294, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.454902, 0.145098, 0, 1 )
text = "Game Paused"
align = 1

[node name="Subtitle" type="Label" parent="PauseMenu/VBoxContainer"]
margin_top = 127.0
margin_right = 634.0
margin_bottom = 165.0
custom_fonts/font = ExtResource( 2 )
text = "Game Paused"
align = 1

[node name="Continue" type="Button" parent="PauseMenu/VBoxContainer"]
margin_top = 169.0
margin_right = 634.0
margin_bottom = 231.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_hover = Color( 0.482353, 0.235294, 0, 1 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="PauseMenu/VBoxContainer"]
margin_top = 235.0
margin_right = 634.0
margin_bottom = 297.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_hover = Color( 0.482353, 0.235294, 0, 1 )
text = "Back to Menu"

[connection signal="pressed" from="PauseMenu/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
